# reussir-playground

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ghcr.yml
bundle-build/: editor-bundle.mjs  package.json
docker/: README.md  config.landlock.toml  seccomp-landlock.json
frontend/: app.js  editor.js  examples.js  index.html  package.json  pnpm-lock.yaml  style.css  vite.config.ts  wasi.js
frontend/src/: main.tsx
frontend/src/api/: compile.ts
frontend/src/components/: driver-editor.tsx  editor-pane.tsx  output-panel.tsx  playground.tsx  source-editor.tsx  toolbar.tsx
frontend/src/data/: examples.ts
frontend/src/hooks/: use-compile.ts  use-keyboard-shortcut.ts  use-mobile.ts  use-shared-state.ts  use-theme.ts
frontend/src/lang/: output-languages.ts  reussir-monarch.ts  reussir-theme.ts
frontend/src/lib/: share.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/runtime/: wasi.ts
frontend/src/store/: atoms.ts
frontend/src/styles/: globals.css
frontend/syntaxes/: reussir.tmLanguage.json
server/: Cargo.toml
server/src/: compile.rs  config.rs  harness.rs  main.rs  sandbox.rs
src/: compile.rs  harness.rs  main.rs
