[package]
name = "reussir-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1"
axum        = "0.8"
base64      = "0.22"
clap        = { version = "4", features = ["derive"] }
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tempfile    = "3"
tokio       = { version = "1", features = ["full"] }
toml        = "0.8"
tower-http  = { version = "0.6", features = ["fs", "cors"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = "0.4"
